samples/_failures_safe/1761319947_fb6de4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75495424.c: In function ‘main’:
./samples/SAFE/__tmp_75495424.c:145:25: error: missing terminating " character
  145 |         fprintf(stderr, "De
      |                         ^~~
./samples/SAFE/__tmp_75495424.c:145:9: error: expected expression at end of input
  145 |         fprintf(stderr, "De
      |         ^~~~~~~
./samples/SAFE/__tmp_75495424.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75495424.c:145:9: error: expected declaration or statement at end of input
